--- a/cat.html
+++ b/cat.html
@@ -9,5 +9,6 @@
     <h1>Hello from catalog</h1>
     <p>First paragraph</p>
     <p>Second paragraph</p>
+    <p>Third paragraph</p>
   </body>
 </html>
