--- a/cat.html
+++ b/cat.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>Hello from catalog</h1>
-    <h2>New paragraph</h2>
+    <p>First paragraph</p>
+    <p>Second paragraph</p>
   </body>
 </html>
